# DTLN_v2.0

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
DTLNbeta/: DTLN_model.py  dtln_aecmodel_blockLen512_blockShift_256_1.tflite  dtln_aecmodel_blockLen512_blockShift_256_2.tflite
DTLNbeta/test/: run_ft16_FFT.py
benchmark_reports/: aec_quality_benchmark_real.json  aec_runtime_benchmark.json  aec_runtime_benchmark_real.json
benchmarks/: benchmark_aec_quality.py  benchmark_aec_runtime.py
configs/: aec_infer_tflite.json  aec_train.json  denoise_train.json
docs/: architecture.md  benchmarking.md  data.md  rewrite-evidence.md  testing.md  usage.md
src/moneyprint_dtln/: __init__.py  cli.py  config.py  exceptions.py  exporters.py  inspection.py  layers.py  legacy.py  metrics.py  preprocess.py  recipes.py  reporting.py  runtime.py  signal.py  tf_compat.py  training.py
src/moneyprint_dtln/data/: __init__.py  dataset.py  manifest.py  pairs.py
src/moneyprint_dtln/models/: __init__.py  aec.py  common.py  noise.py
src/moneyprint_dtln/utils/: audio.py  filesystem.py  logging.py
tests/: conftest.py  test_audio.py  test_config.py  test_inspection.py  test_manifest.py  test_metrics.py  test_pairs.py  test_preprocess.py  test_recipes.py  test_reporting.py
